salesforce-main/src/main/default/objects/GRAD_Assignment__c/GRAD_Assignment__c.object-meta.xml
<CustomObject>
    <label>GRAD Assignment</label>
    <nameField>
        <displayFormat>GA-{0}</displayFormat>
        <label>GRAD Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GRAD Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>