salesforce-main/src/main/default/objects/GRAD_Assignment__c/fields/Talent_Coach__c.field-meta.xml
<CustomField>
    <fullName>Talent_Coach__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Talent Coach</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>Vanta Talent Coach (TAC)</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>GRAD_Assignments_TAC</relationshipName>
    <type>Lookup</type>
</CustomField>