salesforce-main/src/main/default/objects/GRAD_Assignment__c/fields/Talent_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Talent_Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Talent Consultant</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>Vanta Talent Consultant (TCO)</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>GRAD_Assignments_TCO</relationshipName>
    <type>Lookup</type>
</CustomField>